traefik/02-deploy/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik
  namespace: kube-system
spec:
  selector:
    app: traefik
  externalTrafficPolicy: Local
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  - protocol: TCP
    port: 443
    targetPort: 443
    name: https
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: admin
  - protocol: TCP
    port: 8082
    targetPort: 8082
    name: metrics
  type: LoadBalancer
